phservice-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-hole-dns
  namespace: www
  labels:
    app: pi-hole
spec:
  selector:
    app: pi-hole 
  ports:
#  - name: pihole-webui
#    port: 80
#    targetPort: 80
#    protocol:   TCP
  - name:       pihole-dns1
    port: 53
    targetPort: 53
    protocol:   TCP
    nodePort: 31053
  - name:       pihole-dns2
    port:       53
    targetPort: 53
    protocol:   UDP
    nodePort: 31054
  selector:
    app: pi-hole
  type: NodePort
  externalIPs:
    - 192.168.1.32
