phservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-hole
  namespace: www
  labels:
    app: pi-hole
spec:
  selector:
    app: pi-hole 
  ports:
  - name: pihole-webui
    port: 80
    targetPort: 80
    protocol:   TCP
#  - name:       pihole-dns1
#    port: 53
#    targetPort: 53
#    protocol:   TCP
#  - name:       pihole-dns2
#    port:       53
#    targetPort: 53
#    protocol:   UDP
  selector:
    app: pi-hole
